Extended and refactored the transport